# bzlmodRio-imgui

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  auto_update.py  generate.py  get_imgui_dependencies.py  get_version.py  publish.py
libraries/cpp/imgui/: BUILD.bazel
private/cpp/imgui/: BUILD.bazel
private/non_bzlmod_dependencies/: setup_dependencies.bzl
tests/: MODULE.bazel  WORKSPACE
tests/cpp/imgui/: BUILD.bazel  main.cpp  test.cpp
