py_library(
    name = "get_imgui_dependencies",
    srcs = ["get_imgui_dependencies.py"],
    visibility = ["//visibility:public"],
    deps = ["@bzlmodrio-gentool//bazelrio_gentool"],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_imgui_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_imgui_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
