alias(
    name = "imgui",
    actual = ":static",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
    ] + [
        "@bzlmodrio-imgui//private/cpp/imgui:static",
    ],
)
