cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    tags = ["no-sandbox"],
    deps = ["@bzlmodrio-imgui//libraries/cpp/imgui"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-imgui//libraries/cpp/imgui",
        "@googletest//:gtest_main",
    ],
)
